РћР±РЅРѕРІР»РµРЅР° С€Р»Р°РІРЅР°СЏ СЃС‚СЂР°РЅРёС†Р°. Р”РѕР±Р°РІР»РµРЅ РґР°РјРї Р‘Р”. РњРµР»РєРёРµ РёР·РјРµРЅРµРЅРёСЏ.

--- a/TODO
+++ b/TODO
@@ -1,12 +1,26 @@
-TODO:
-    ГЛАВНАЯ СТРАНИЦА:
-        [] Сделать главную страницу
-        [] Поместить ссылки на таблицы в навбар
+ADMIN TODO:
+    ГЛАВНАЯ СТРАНИЦА ADMIN:
+        ✔ Сделать главную страницу @done(19-01-27 13:27)
+        ✔ Поместить ссылки на таблицы в навбар @done(19-01-27 13:27)
     
     РЕДАКТИРОВАНИЕ ЗАПИСИ:
-
+        ✔ Формы для редактирования записи @done(19-01-27 13:32)
 
     ДОБАВЛЕНИЕ ЗАПИСИ:
-        [] Создать форму, на основе полей таблицы
+        ✔ Создать форму, на основе полей таблицы @done(19-01-27 13:32)
         [] Предусмотреть, что некоторые поля могут быть с выбором из внешних ключей таблицы
-        [] Собирать форму на HTML, в шаблоне. Передавать данные формы и парсить на сервере.
+        ✔ Собирать форму на HTML, в шаблоне. Передавать данные формы и парсить на сервере. @done(19-01-27 13:32)
+
+САЙТ:
+    [] Добавить логотип @started(19-01-27 14:43)
+    [] Причесать формы @started(19-01-27 14:43)
+    [] Расчитать рационы @started(19-01-27 14:43)
+    Добавить страницу итогов:
+        [] Таблица основого рациона
+        [] Таблица Второй части рациона
+        [] Кисломолочка
+        [] Сколько раз кормить
+        [] Кнопки закзать и повторить
+
+
+    
