--- a/TODO
+++ b/TODO
@@ -8,19 +8,19 @@ ADMIN TODO:
 
     ДОБАВЛЕНИЕ ЗАПИСИ:
         ✔ Создать форму, на основе полей таблицы @done(19-01-27 13:32)
-        [] Предусмотреть, что некоторые поля могут быть с выбором из внешних ключей таблицы
+        ✘ Предусмотреть, что некоторые поля могут быть с выбором из внешних ключей таблицы @cancelled(19-01-28 20:23)
         ✔ Собирать форму на HTML, в шаблоне. Передавать данные формы и парсить на сервере. @done(19-01-27 13:32)
 
 САЙТ:
     [] Добавить логотип @started(19-01-27 14:43)
     [] Причесать формы @started(19-01-27 14:43)
-    [] Расчитать рационы @started(19-01-27 14:43)
+    ✔ Расчитать рационы @started(19-01-27 14:43) @done(19-01-28 20:23) @lasted(1d5h40m5s)
     Добавить страницу итогов:
-        [] Таблица основого рациона
-        [] Таблица Второй части рациона
-        [] Кисломолочка
+        ✔ Таблица основого рациона @done(19-01-28 20:23)
+        ✘ Таблица Второй части рациона @cancelled(19-01-28 20:23)
+        [] Кисломолочка @started(19-01-28 20:23)
         [] Сколько раз кормить
-        [] Кнопки закзать и повторить
+        ✔ Кнопки закзать и повторить @done(19-01-28 20:23)
 
 
     
