Небольшие правки в запросах.

--- a/TODO
+++ b/TODO
@@ -13,13 +13,13 @@ ADMIN TODO:
 
 САЙТ:
     [] Добавить логотип @started(19-01-27 14:43)
-    [] Причесать формы @started(19-01-27 14:43)
+    ✔ Причесать формы @started(19-01-27 14:43) @done(19-01-29 14:53) @lasted(2d10m42s)
     ✔ Расчитать рационы @started(19-01-27 14:43) @done(19-01-28 20:23) @lasted(1d5h40m5s)
     Добавить страницу итогов:
         ✔ Таблица основого рациона @done(19-01-28 20:23)
         ✘ Таблица Второй части рациона @cancelled(19-01-28 20:23)
-        [] Кисломолочка @started(19-01-28 20:23)
-        [] Сколько раз кормить
+        ✔ Кисломолочка @started(19-01-28 20:23) @done(19-01-29 14:53) @lasted(18h30m36s)
+        ✔ Сколько раз кормить @done(19-01-29 14:53)
         ✔ Кнопки закзать и повторить @done(19-01-28 20:23)
 
 
